Code and internal documentation clean-up.